Limited Attributes and fixes date alignment

--- a/src/components/Table/Table.module.css
+++ b/src/components/Table/Table.module.css
@@ -46,3 +46,7 @@ tbody tr > td {
   color: var(--text-primary);
   text-align: left;
 }
+
+.dateClaimedRow {
+  text-align: right;
+}
